--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Resume</title> 
+    <link rel="stylesheet" href="first1.css">
 </head>
-<body>
+<body >
     <header>
     <!-- table start-->
     <table border="1" align="center" width="30%">
